--- a/image/desktop.ini
+++ b/image/desktop.ini
@@ -1,2 +1,3 @@
 [LocalizedFileNames]
 Screenshot 2025-04-23 110304.png=@Screenshot 2025-04-23 110304.png,0
+Screenshot 2025-04-23 123644.png=@Screenshot 2025-04-23 123644.png,0
